--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tanstack/react-query-devtools": "^5.80.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "lucide-react": "^0.513.0",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
